Add most functionality minus HTTP API
